# internal-mcp-server

./: .env.example  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-publish.yml
src/internal_mcp_server/: server.py
