[build-system]
requires = ["uv_build>=0.11.1,<0.12"]
build-backend = "uv_build"

[project]
name = "internal-mcp-server"
version = "0.0.1"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14,<3.15"
authors = [{ name = "Mehmet Can Ay", email = "mehmet.ay@scai.fraunhofer.de" }]
dependencies = ["fastmcp>=3.2.4"]
